crimson/os/seastore/cache: wait for root's io even if it's already in the transaction

Fixes: https://tracker.ceph.com/issues/52614
Signed-off-by: Xuehan Xu <xxhdx1985126@gmail.com>